--- a/manual/CommonPitfalls.tex
+++ b/manual/CommonPitfalls.tex
@@ -28,8 +28,8 @@ It is not possible to transfer a handle to a response to another actor.
 \begin{itemize}
 
 \item
-\lstinline^send(whom, ...)^ is defined as \lstinline^send_tuple(whom, make_any_tuple(...))^.
-Hence, a message sent via \lstinline^send(whom, self->last_dequeued())^ will not yield the expected result, since it wraps \lstinline^self->last_dequeued()^ into another \lstinline^any_tuple^ instance.
+\lstinline^send(whom, ...)^ is defined as \lstinline^send_tuple(whom, make_message(...))^.
+Hence, a message sent via \lstinline^send(whom, self->last_dequeued())^ will not yield the expected result, since it wraps \lstinline^self->last_dequeued()^ into another \lstinline^message^ instance.
 The correct way of forwarding messages is \lstinline^self->forward_to(whom)^.
 
 \end{itemize}
