--- a/manual/SendingMessages.tex
+++ b/manual/SendingMessages.tex
@@ -12,12 +12,12 @@ void send(actor whom, Args&&... what);
 The variadic template pack \lstinline^what...^ is converted to a dynamically typed tuple (see Section \ref{Sec::Tuples::DynamicallyTypedTuples}) and then enqueued to the mailbox of \lstinline^whom^.
 
 Using the function \lstinline^send^ is more compact, but does not have any other benefit.
-However, note that you should not use \lstinline^send^ if you already have an instance of \lstinline^any_tuple^, because it creates a new tuple containing the old one.
+However, note that you should not use \lstinline^send^ if you already have an instance of \lstinline^message^, because it creates a new tuple containing the old one.
 
 \begin{lstlisting}
 void some_fun(event_based_actor* self) {
   actor other = spawn(...);
-  auto msg = make_any_tuple(1, 2, 3);
+  auto msg = make_message(1, 2, 3);
   self->send(other, msg); // oops, creates a new tuple containing msg
   self->send_tuple(other, msg); // ok
 }
