Use `CAF` rather than `libcaf` in manual

--- a/manual/variables.tex
+++ b/manual/variables.tex
@@ -1,7 +1,7 @@
-\newcommand{\lib}{\texttt{libcaf}\xspace}
+\newcommand{\lib}{CAF\xspace}
 
 \newcommand{\libtitle}{%
-\texttt{\huge{\textbf{\lib}}}\\~\\A C++ library for actor programming\\~\\~\\~\\%
+\texttt{\huge{\textbf{\lib}}}\\~\\A C++ framework for actor programming\\~\\~\\~\\%
 }
 
 \newcommand{\libsubtitle}{%
