--- a/manual/PatternMatching.tex
+++ b/manual/PatternMatching.tex
@@ -149,7 +149,7 @@ message_handler fun {
   on(intproj) >> [](int i) {
     // case 1: successfully converted a string
   },
-  on_arg_match >> [](const string& str) {
+  [](const string& str) {
     // case 2: str is not an integer
   }
 };
