Fix subsection name for links

--- a/manual/Introduction.tex
+++ b/manual/Introduction.tex
@@ -60,7 +60,7 @@ This allows the compiler to check message types statically.
 A monitored actor sends a ``down message'' to all actors monitoring it as part of its termination.
 This allows actors to supervise other actors and to take measures when one of the supervised actors failed, i.e., terminated with a non-normal exit reason.
 
-\subsubsection{Link}
+\subsubsection{Links}
 
 A link is bidirectional connection between two actors.
 Each actor sends an ``exit message'' to all of its links as part of its termination.
