Add set_exception_handler to manual

--- a/manual/Actors.tex
+++ b/manual/Actors.tex
@@ -59,5 +59,7 @@ class local_actor;
   \hline
   \lstinline^bool has_sync_failure_handler()^ & Checks wheter this actor has a user-defined sync failure handler \\
   \hline
+  \lstinline^template <class F>^ \lstinline^void set_exception_handler(F f)^ & Sets a custom handler for uncaught exceptions \\
+  \hline
 \end{tabular*}
 }
