Use CAF instead of "libcaf" in Manual

--- a/manual/Appendix.tex
+++ b/manual/Appendix.tex
@@ -127,9 +127,9 @@ The APIs of typed and untyped actors have been harmonized.
 Typed actors can now be published in the network and also use all operations untyped actors can.
 
 \clearpage
-\subsubsection{0.9 $\Rightarrow$ 0.10 (\texttt{libcppa} $\Rightarrow$ \texttt{libcaf})}
+\subsubsection{0.9 $\Rightarrow$ 0.10 (\texttt{libcppa} $\Rightarrow$ CAF)}
 
-The first release under the new name \texttt{libcaf} is an overhaul of the entire library.
+The first release under the new name CAF is an overhaul of the entire library.
 Some classes have been renamed or relocated, others have been removed.
 The purpose of this refactoring was to make the library easier to grasp and to make its API more consistent.
 All classes now live in the namespace \lstinline^caf^ and all headers have the top level folder ``caf'' instead of ``cppa''.
