--- a/manual/StronglyTypedActors.tex
+++ b/manual/StronglyTypedActors.tex
@@ -121,9 +121,11 @@ void tester(event_based_actor* self, const calculator_type& testee) {
 
 int main() {
     // announce custom message types
-    announce<shutdown_request>();
-    announce<plus_request>(&plus_request::a, &plus_request::b);
-    announce<minus_request>(&minus_request::a, &minus_request::b);
+    announce<shutdown_request>("shutdown_request");
+    announce<plus_request>("plus_request",
+                           &plus_request::a, &plus_request::b);
+    announce<minus_request>("minus_request",
+                            &minus_request::a, &minus_request::b);
     // test function-based impl
     spawn(tester, spawn_typed(typed_calculator));
     await_all_actors_done();
