--- a/manual/TypeSystem.tex
+++ b/manual/TypeSystem.tex
@@ -27,14 +27,15 @@ using namespace cppa;
 struct foo { int a; int b; };
 
 int main() {
-  announce<foo>(&foo::a, &foo::b);
+  announce<foo>("foo", &foo::a, &foo::b);
   // ... foo can now safely be used in messages ...
 }
 \end{lstlisting}
 
 Without the \lstinline^announce^ function call, the example program would terminate with an exception, because \lib rejects all types without available runtime type information.
 
-\lstinline^announce()^ takes the class as template parameter and pointers to all members (or getter/setter pairs) as arguments.
+\lstinline^announce()^ takes the class as template parameter.
+The first argument to the function always is the type name followed by pointers to all members (or getter/setter pairs).
 This works for all primitive data types and STL compliant containers.
 See the announce examples 1 -- 4 of the standard distribution for more details.
 
