--- a/manual/Appendix.tex
+++ b/manual/Appendix.tex
@@ -3,7 +3,7 @@
 \subsection{Class \texttt{option}}
 \label{Appendix::Option}
 
-Defined in header \lstinline^"cppa/option.hpp"^.
+Defined in header \lstinline^"caf/option.hpp"^.
 
 \begin{lstlisting}
 template<typename T>
@@ -56,8 +56,8 @@ Represents an optional value.
 When using \lstinline^cout^ from multiple actors, output often appears interleaved.
 Moreover, using \lstinline^cout^ from multiple actors -- and thus from multiple threads -- in parallel should be avoided regardless, since the standard does not guarantee a thread-safe implementation.
 
-By replacing \texttt{std::cout} with \texttt{cppa::aout}, actors can achieve a concurrency-safe text output.
-The header \lstinline^cppa/cppa.hpp^ also defines overloads for \texttt{std::endl} and \texttt{std::flush} for \lstinline^aout^, but does not support the full range of ostream operations (yet).
+By replacing \texttt{std::cout} with \texttt{caf::aout}, actors can achieve a concurrency-safe text output.
+The header \lstinline^caf/all.hpp^ also defines overloads for \texttt{std::endl} and \texttt{std::flush} for \lstinline^aout^, but does not support the full range of ostream operations (yet).
 Each write operation to \texttt{aout} sends a message to a `hidden' actor (keep in mind, sending messages from actor constructors is not safe).
 This actor only prints lines, unless output is forced using \lstinline^flush^.
 The example below illustrates printing of lines of text from multiple actors (in random order).
@@ -66,9 +66,9 @@ The example below illustrates printing of lines of text from multiple actors (in
 #include <chrono>
 #include <cstdlib>
 #include <iostream>
-#include "cppa/cppa.hpp"
+#include "caf/all.hpp"
 
-using namespace cppa;
+using namespace caf;
 using std::endl;
 
 int main() {
