--- a/manual/NetworkTransparency.tex
+++ b/manual/NetworkTransparency.tex
@@ -7,11 +7,13 @@ All functions shown in this section can be accessed by including the header \lst
 \subsection{Publishing of Actors}
 
 \begin{lstlisting}
-uint16_t publish(actor whom, uint16_t port, const char* addr = 0, bool reuse_addr = false)
+uint16_t publish(actor whom, uint16_t port,
+                 const char* addr = nullptr,
+                 bool reuse_addr = false)
 \end{lstlisting}
 
 The function \lstinline^publish^ binds an actor to a given port.
-To choose the next high-level port available available for binding, one can specify \lstinline^port == 0^ and retrieves the bound port as return value.
+To choose the next high-level port available for binding, one can specify \lstinline^port == 0^ and retrieves the bound port as return value.
 The return value is equal to \lstinline^port^ if \lstinline^port != 0^.
 The function throws \lstinline^network_error^ if socket related errors occur or \lstinline^bind_failure^ if the specified port is already in use.
 The optional \lstinline^addr^ parameter can be used to listen only to the given address.
@@ -32,12 +34,14 @@ self->become (
 );
 \end{lstlisting}
 
-To close a socket, e.g., to allow other actors to be published at the port, the function \lstinline^unpublish^ can be used:
+To close a socket, e.g., to allow other actors to be published at the port, the function \lstinline^unpublish^ can be used.
+This function is called implicitly if a published actor terminates.
 
 \begin{lstlisting}
 void unpublish(caf::actor whom, uint16_t port)
 \end{lstlisting}
 
+\clearpage
 \subsection{Connecting to Remote Actors}
 
 \begin{lstlisting}
