--- a/manual/TypeSystem.tex
+++ b/manual/TypeSystem.tex
@@ -10,10 +10,13 @@ Unlike \lstinline^std::type_info::name()^, \lstinline^uniform_type_info::name()^
 
 \begin{lstlisting}
 // creates a signed, 32 bit integer
-cppa::object i = cppa::uniform_typeid<int>()->create();
+uniform_value i = uniform_typeid<int>()->create();
 \end{lstlisting}
 
-However, you should rarely if ever need to use \lstinline^object^ or \lstinline^uniform_type_info^.
+You should rarely, if ever, need to use \lstinline^uniform_value^ or \lstinline^uniform_type_info^.
+The type \lstinline^uniform_value^ stores a type-erased pointer along with the associated \lstinline^uniform_type_info^.
+The sole purpose of this simple abstraction is to enable the pattern matching engine of \lib to query the type information and then dispatch the value to a message handler.
+When using a \lstinline^message_builder^, each element is stored as a \lstinline^uniform_value^.
 
 \subsection{User-Defined Data Types in Messages}
 \label{Sec::TypeSystem::UserDefined}
@@ -21,20 +24,18 @@ However, you should rarely if ever need to use \lstinline^object^ or \lstinline^
 All user-defined types must be explicitly ``announced'' so that \lib can (de)serialize them correctly, as shown in the example below.
 
 \begin{lstlisting}
-#include "cppa/cppa.hpp"
-using namespace cppa;
+#include "caf/all.hpp"
 
 struct foo { int a; int b; };
 
 int main() {
-  announce<foo>("foo", &foo::a, &foo::b);
+  caf::announce<foo>("foo", &foo::a, &foo::b);
   // ... foo can now safely be used in messages ...
 }
 \end{lstlisting}
 
-Without the \lstinline^announce^ function call, the example program would terminate with an exception, because \lib rejects all types without available runtime type information.
-
-\lstinline^announce()^ takes the class as template parameter.
+Without announcing \lstinline^foo^, \lib is not able to (de)serialize instances of it.
+The function \lstinline^announce()^ takes the class as template parameter.
 The first argument to the function always is the type name followed by pointers to all members (or getter/setter pairs).
 This works for all primitive data types and STL compliant containers.
 See the announce examples 1 -- 4 of the standard distribution for more details.
